Bug 1453872 - Make HTMLEditRules::JoinNodesSmart() return { aRightNode - aLeftNode.Length() } by default. r=m_kato, a=jcristau

This is regression of bug 1423835.

When I fixed the bug, I accidentally changed the result of
HTMLEditRules::JoinNodesSmart() to use new API.  However, it was simple
misunderstand.  The original code sets the initial value of result to
{ aRightNode - aLeftNode.Length() } but I understood it as
{ aRightNode - aRightNode.Length() }.  Therefore, this patch backs out the
patch only for this line.

MozReview-Commit-ID: 5rD7YFij8v